--- a/index.html
+++ b/index.html
@@ -1,9 +1,92 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-	</head>
+<!DOCTYPE html>
+<html lang="en" class="no-js one-page-layout" data-classic-layout="false" data-mobile-only-classic-layout="true" data-inAnimation="fadeInUp" data-outAnimation="fadeOutDownBig">
+    <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="description" content="mrHungr: My place to remember.
+">
+    <meta name="keywords" content="mrHungr: My place to remember.">
+    <meta name="author" content="mrHungr">
+
+    <meta name="google-site-verification" content="">
+
+    <title>mrHungr - Home</title>
+
+    <!-- FAV and TOUCH ICONS -->
+    <link rel="shortcut icon" href="/img/favicon.png">
+    <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
+
+    <script src="/js/modernizr.custom.js"></script>
+
+    <!-- STYLES -->
+    <link rel="stylesheet" media="print" href="/css/print.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/js/nprogress/nprogress.css">
+    <link rel="stylesheet" href="/css/animate.css">
+    <link rel="stylesheet" href="/css/fonts/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/fonts/fontello/css/fontello.css">
+    <link rel="stylesheet" href="/css/jquery.fancybox-1.3.4.css">
+    <link rel="stylesheet" href="/js/google-code-prettify/prettify.css">
+    <link rel="stylesheet" href="/css/uniform.default.css">
+    <link rel="stylesheet" href="/css/flexslider.css">
+    <link rel="stylesheet" href="/js/mediaelement/mediaelementplayer.css">
+    <link rel="stylesheet" href="/css/tooltipster.css">
+    <link rel="stylesheet" href="/css/rr_light.css">
+    <link rel="stylesheet" href="/js/tipuesearch/tipuesearch.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/personal.css">
+
+    <!--[if lte IE 9]>
+    <script src="/js/html5shiv.js"></script>
+    <script src="/js/respond.min.js"></script>
+    <script src="/js/selectivizr-min.js"></script>
+    <![endif]-->
+
+
+    <!-- FONTS -->
+    <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Handlee|Oswald|Tangerine:400,700" rel="stylesheet">
+
+    <link rel="canonical" href="http://mrHungr.github.io/">
+    <link rel="alternate" type="application/rss+xml" title="mrHungr" href="http://mrHungr.github.io/feed.xml" />
+</head>
+
 	<body>
 	<h1>Hello World</h1>
 	<p>Now on GitHub Sites.</p>
-	</body>
-</html>
+
+
+
+	<!-- SCRIPTS -->
+	<script src="/js/jquery-1.10.2.min.js"></script>
+	<script src="/js/jquery-migrate-1.2.1.min.js"></script>
+	<script src="/js/jquery.address-1.5.min.js"></script>
+	<script src="/js/triple.layout.js"></script>
+	<script src="/js/smoothscroll.js"></script>
+	<script src="/js/nprogress/nprogress.js"></script>
+	<script src="/js/fastclick.js"></script>
+	<script src="/js/jquery.imagesloaded.min.js"></script>
+	<script src="/js/jquery.isotope.min.js"></script>
+	<script src="/js/jquery.flexslider-min.js"></script>
+	<script src="/js/jquery.fitvids.js"></script>
+	<script src="/js/jquery.validate.min.js"></script>
+	<script src="/js/jquery.uniform.min.js"></script>
+	<script src="/js/jquery.fancybox-1.3.4.pack.js"></script>
+	<script src="/js/jquery.tooltipster.min.js"></script>
+	<script src="/js/google-code-prettify/prettify.js"></script>
+	<script src="/js/twitterFetcher_v10_min.js"></script>
+	<script src="/js/mediaelement/mediaelement-and-player.min.js"></script>
+	<script src="/js/send-mail.js"></script>
+	<script src="/js/classie.js"></script>
+	<script src="/js/readmore.min.js"></script>
+	<script src="/js/readremaining.jquery.js"></script>
+	<script src="/js/personal.js"></script>
+	<script src="/js/main.js"></script>
+
+
+	    </body>
+	</html>
