--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 							<div class="media-box">
 								<img src="/img/projects/mongocodes.png" alt="A screenshot of the home page of the website for Mongocodes" title="Project: Mongocodes">
 								<div class="mask"></div>
-								<a href="/mongocodes" class="ajax"></a>
+								<a href="portfolio/mongocodes" class="ajax"></a>
 							</div>
 
 							<div class="media-cell-desc">
